# Altirix

./: config.py  counter.py  main.py  pyproject.toml  requirements.txt
Logic/: __init__.py  contract.py  database.py  rating.py  user.py
data_manipulation/: data_extracter.py  simulate.py
web/: forms.py
web/templates/: add_contract.html  add_user.html  base.html  change_settings.html  index.html  user_page.html
