[tool.poetry]
name = "Gleb_Altirix"
version = "0.1.0"
description = ""
authors = ["Gleb Tambovtsev"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-Cors = "^3.0.10"
SQLAlchemy = "^1.4.27"
WTForms = "^3.0.0"
WTForms-SQLAlchemy = "^0.3"
Flask = "^2.0.2"
Flask-Admin = "^1.5.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
